register page added + umrezavanje
male promjene na  loginu i return dodan

--- a/Projekt/HTML/Login_Register/login.html
+++ b/Projekt/HTML/Login_Register/login.html
@@ -13,7 +13,7 @@
 		<li class="navitem"><a class="active" href="login.html">Log In</a></li>
 		<li class="navitem"><a href="register.html">Register</a></li>
 		
-		<li class="navitem" style="float:right;  border-right: none;"><a href="">Return</a></li>
+		<li class="navitem" style="float:right;  border-right: none;"><a href="../pocetna.html">Return</a></li>
 	</ul>
 
 <div class="header">
@@ -34,6 +34,8 @@
 	</div>
 	<div class="rest">
 		<img src="fb_login_pic.png" style="width: 50%;">
+		<br>
+		<p> Log in with Facebook </p>
 	</div>
 </div>
 
