--- a/Projekt/HTML/Login_Register/login.html
+++ b/Projekt/HTML/Login_Register/login.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-	<ul class="navbar">
-		<li class="navitem"><a class="active" href="login.html">Log In</a></li>
-		<li class="navitem"><a href="register.html">Register</a></li>
-		
-		<li class="navitem" style="float:right;  border-right: none;"><a href="../pocetna.html">Return</a></li>
-	</ul>
+	<div class="navbar">
+  		<a href="login.html" class="active">Login</a>
+  		<a href="register.html" >Register</a>
+  		<a href="../pocetna.html" class="right">Return</a>
+	</div>
+
 
 <div class="header">
 	<div class="left">
@@ -33,7 +33,7 @@
 
 	</div>
 	<div class="rest">
-		<img src="fb_login_pic.png" style="width: 50%;">
+		<img src="fb_login_pic.png" style="width: 200px;">
 		<br>
 		<p> Log in with Facebook </p>
 	</div>
