--- a/Projekt/HTML/Login_Register/register.html
+++ b/Projekt/HTML/Login_Register/register.html
@@ -9,12 +9,11 @@
 </head>
 <body>
 
-	<ul class="navbar">
-		<li class="navitem"><a href="login.html">Log In</a></li>
-		<li class="navitem"><a  class="active" href="register.html">Register</a></li>
-		
-		<li class="navitem" style="float:right;  border-right: none;"><a href="../pocetna.html">Return</a></li>
-	</ul>
+	<div class="navbar">
+  		<a href="login.html" >Login</a>
+  		<a href="register.html" class="active">Register</a>
+  		<a href="../pocetna.html" class="right">Return</a>
+	</div>
 
 <div class="header_r">
 	<div class="left">
@@ -40,7 +39,7 @@
 
 	</div>
 	<div class="rest">
-		<img src="fb_login_pic.png" style="width: 50%;">
+		<img src="fb_login_pic.png" style="width: 200px;">
 		<br>
 		<p> Register with Facebook </p>
 	</div>
