--- a/Projekt/HTML/pocetna.html
+++ b/Projekt/HTML/pocetna.html
@@ -3,6 +3,7 @@
 	<title>Snake</title>
 
 	<link rel="stylesheet" type="text/css" href="../CSS/pocetnastranica.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
@@ -12,8 +13,8 @@
 	<div class="header">
 
 		<div class="side" align="right">
-			<button class="login" >Login</button>
-			<button class="login" >Register</button>
+			<a class="login" href="Login_Register/login.html">Login</a>
+			<a class="login" href="Login_Register/register.html">Register</a>
 		</div>
 		<div class="middle" align="center"><img src="../CSS/Pozadine/gmizalica.png" style="width: 100%;"></div>
 		<div class="side"></div>
@@ -24,21 +25,10 @@
 	<div class="menu">
 		<div class="side"></div>
 		<div class="middle" align="center">
-			<br>
-			<br>
-			<button class="gumb">Play as guest</button>
-			<br>
-			<br>
-			<br>
-			<button class="gumb">Leaderboard</button>
-			<br>
-			<br>
-			<br>
-			<button class="gumb">Settings</button>
-			<br>
-			<br>
-			<br>
-			<button class="gumb">About</button>
+			<a class="gumb" href="snake.html">Play as guest</a >
+			<a class="gumb" href="Leaderboard/dailyleaderboard.html">Leaderboard</a>
+			<a class="gumb" href="Settings/settings.html">Settings</a>
+			<a class="gumb" href="">About</a>
 		</div>
 		<div class="side"></div>
 	</div>
